# rnet-requests

./: README.md  pyproject.toml
rnet_requests/: __init__.py  api.py  async_api.py  async_session.py  base.py  cookies.py  exceptions.py  headers.py  impersonate.py  models.py  multipart.py  sessions.py  structures.py  websockets.py
tests/: __init__.py  test_async.py  test_basic.py  test_curl_cffi_compat.py  test_integration.py  test_uploads_cookies.py  test_websocket.py
