[project]
name = "rnet-requests"
version = "0.1.0"
description = "A requests-compatible API wrapper for rnet with browser impersonation support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "rnet-requests contributors" }
]
keywords = ["http", "requests", "rnet", "tls", "fingerprint", "impersonate", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "rnet>=3.0.0rc22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "mypy>=1.9.0",
    "ruff>=0.3.5",
]

[project.urls]
Homepage = "https://github.com/your-org/rnet-requests"
Repository = "https://github.com/your-org/rnet-requests"
Documentation = "https://github.com/your-org/rnet-requests#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rnet_requests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "curl-cffi>=0.13.0",
]
